fixed overflow

--- a/src/app/fragments/chatroom/chatroom.component.css
+++ b/src/app/fragments/chatroom/chatroom.component.css
@@ -282,13 +282,13 @@ video {
 
 
 .pc-controls {    
-  flex: 1.5;
+  flex: 1;
   width: 100%;               /* set bar height */
   display: flex;
   flex-direction: row;
   justify-content: center;       /* horizontal center */
   align-items: center;           /* vertical center */
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
   gap: 15px;  
   .send-button{
     font-size: 12px;
@@ -307,7 +307,10 @@ video {
 
 @media (max-width: 600px) {
   .main-ground{
+    display: flex;
     flex: 8;
+    align-items: center;
+    justify-content: center;
 
     .video-container{
       flex-direction: column;
@@ -316,12 +319,13 @@ video {
 
     .video-wrapper{
       width: 100%;
-      aspect-ratio: 4/1;
+      aspect-ratio: 4/2;
     }
   }
 
   .mobile-controls{
     flex: 1.5;
+    align-items: center;
     button{
       padding: 10px;
       height: 50px;
