--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -64,7 +64,8 @@
   }
   
   .router-body {
-    height: 100%;
+    height: calc(100vh - 55px);
+    background-color: antiquewhite;
     overflow-y: scroll;
     width: 100%;
     margin-top: 55px;
